force-app/main/default/objects/Apttus_Approval__ApprovalProcessInstance__c/Apttus_Approval__ApprovalProcessInstance__c.object-meta.xml
<CustomObject>
    <description>Represents an instance of a single, end-to-end approval process.</description>
    <label>Approval Process Instance</label>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Process Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>