force-app/main/default/objects/Apttus_Approval__ApprovalProcessInstance__c/fields/Apttus_Approval__ApprovalProcessId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalProcessId__c</fullName>
    <description>ID of the approval process associated with the instance</description>
    <label>Approval Process</label>
    <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
    <relationshipLabel>Process Instances</relationshipLabel>
    <relationshipName>ApprovalProcessInstances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>