force-app/main/default/objects/Apttus_Approval__ApprovalProcessInstance__c/fields/Apttus_Approval__AssignmentEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssignmentEmailTemplate__c</fullName>
    <description>The name of the Email Template used to send notifications when an approval request is submitted.</description>
    <label>Assignment Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>