force-app/main/default/objects/Apttus_Approval__ApprovalProcessInstance__c/fields/Apttus_Approval__AttachmentIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AttachmentIds__c</fullName>
    <description>List of attachment ids that should be sent with email notifications</description>
    <inlineHelpText>List of attachment ids that should be sent with email notifications</inlineHelpText>
    <label>Attachment Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>