force-app/main/default/objects/Apttus_Approval__ApprovalProcessInstance__c/fields/Apttus_Approval__BusinessObjectType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BusinessObjectType__c</fullName>
    <description>The business object type</description>
    <label>Business Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>