force-app/main/default/objects/Apttus_Approval__ApprovalProcessInstance__c/fields/Apttus_Approval__CancellationEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__CancellationEmailTemplate__c</fullName>
    <description>The name of the Email Template used to send notifications when an approval request is cancelled.</description>
    <label>Cancellation Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>