force-app/main/default/objects/Apttus_Approval__ApprovalProcessInstance__c/fields/Apttus_Approval__ConsolidationVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ConsolidationVersionNumber__c</fullName>
    <description>Consolidation Implementation Version Number</description>
    <inlineHelpText>Consolidation Implementation Version Number</inlineHelpText>
    <label>Consolidation Version Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>