force-app/main/default/objects/Apttus_Approval__ApprovalProcessInstance__c/fields/Apttus_Approval__Data__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Data__c</fullName>
    <description>Approval Data Cache</description>
    <inlineHelpText>Approval Data Cache</inlineHelpText>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>