force-app/main/default/objects/Apttus_Approval__ApprovalProcessInstance__c/fields/Apttus_Approval__OriginalParentApprovalProcessId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__OriginalParentApprovalProcessId__c</fullName>
    <description>Holds reference to the original process definition id - because we are creating a temporary process definition for each process instance - to avoid locking contention - please refer to Jira - AWA-1970 for further details.</description>
    <inlineHelpText>Holds reference to the original process definition id</inlineHelpText>
    <label>Original Parent Approval Process</label>
    <length>20</length>
    <type>Text</type>
</CustomField>