force-app/main/default/objects/Apttus_Approval__ApprovalProcessInstance__c/fields/Apttus_Approval__PrevProcessInstanceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__PrevProcessInstanceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the previous process instance. Only applicable to resubmissions</description>
    <inlineHelpText>ID of the previous process instance. Only applicable to resubmissions</inlineHelpText>
    <label>Previous Process Instance</label>
    <referenceTo>Apttus_Approval__ApprovalProcessInstance__c</referenceTo>
    <relationshipLabel>Previous Process Instances</relationshipLabel>
    <relationshipName>PrevProcessInstances</relationshipName>
    <type>Lookup</type>
</CustomField>