force-app/main/default/objects/Apttus_Approval__ApprovalProcessInstance__c/fields/Apttus_Approval__StartTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StartTime__c</fullName>
    <description>The process start time</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>